--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 	--bg-black-50: #e8dfec;
 	--text-black-900: #302e4d;
 	--text-black-700: #504e70; */
-	--bg-black-900: #fff7f3;
+	--bg-black-900: #fffcf8;
 	--bg-black-100: #f6f0ed;
 	--bg-black-50: #ece1df;
 	--text-black-900: #372e4d;
