--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,17 @@ body {
 ::after {
 	box-sizing: border-box;
 }
+.ms-container {
+	background: var(--bg-black-100);
+	height: 785px;
+}
+.messageSuccess {
+	background-color: var(--bg-black-50);
+	/* width: 300px; */
+	height: 150px;
+	padding-top: 25px;
+	text-align: center;
+}
 @media (max-width: 1199px) {
 	.section .container {
 		padding-top: 70px;
