--- a/css/style-switcher.css
+++ b/css/style-switcher.css
@@ -60,14 +60,14 @@
 	background: #ff686b;
 }
 .style-switcher .color-2 {
-	background: #ffd97d;
+	background: #ffd574;
 }
 .style-switcher .color-3 {
 	background: #90cf8e;
 }
 .style-switcher .color-4 {
-	background: #7bdff2;
+	background: #61ddf6;
 }
 .style-switcher .color-5 {
-	background: #f4acb7;
+	background: #fd8f9f;
 }
