--- a/css/aside.css
+++ b/css/aside.css
@@ -7,8 +7,6 @@
 	padding: 30px;
 	height: 100%;
 	border-right: 1px solid var(--bg-black-50);
-	/* border-top-right-radius: 30%; */
-	/* border-bottom-right-radius: 50%; */
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -105,7 +103,7 @@
 	top: 0;
 }
 .aside .nav {
-	margin: 60px 0px 0px 20px;
+	margin: 60px 0px 0px 50px;
 	width: 200vh;
 	display: flex;
 	flex-direction: row-reverse;
@@ -113,21 +111,24 @@
 	transform-origin: bottom;
 }
 .aside .nav li {
-	/* margin-bottom: 50px; */
+	margin-right: 15px;
 	display: flex;
 }
 .aside .nav li a {
 	font-size: 16px;
 	font-weight: 600;
 	display: flex;
-	/* border-bottom: 1px solid var(--bg-black-50); */
 	color: var(--text-black-900);
-	padding: 0px 20px;
+	padding: 10px 15px;
 	margin: 0 auto;
 }
 .aside .nav li a.active {
 	color: var(--skin-color);
+	background: var(--bg-black-900);
+	border-bottom: 2px solid var(--skin-color);
+	border-radius: 20px;
+	box-shadow: 0 0.5em 0.5em -0.4em var(--sd-black-300);
 }
 .aside .nav li a i {
-	margin-right: 15px;
+	margin: 3px 0 0 10px;
 }
