--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,12 @@
 	--bg-black-50: #e8dfec;
 	--text-black-900: #302e4d;
 	--text-black-700: #504e70; */
-	--bg-black-900: #fffcf8;
-	--bg-black-100: #f6f0ed;
+	--bg-black-900: #fffcf7;
+	--bg-black-100: #f1ebeb;
 	--bg-black-50: #ece1df;
 	--text-black-900: #372e4d;
 	--text-black-700: #5c4e70;
+	--sd-black-300: #6e6d6d;
 }
 body.dark {
 	--bg-black-900: #151515;
@@ -17,6 +18,7 @@ body.dark {
 	--bg-black-50: #393939;
 	--text-black-900: #ffffff;
 	--text-black-700: #e9e9e9;
+	--sd-black-300: var(--skin-color);
 }
 body {
 	line-height: 1.5;
@@ -34,17 +36,15 @@ body {
 ::after {
 	box-sizing: border-box;
 }
-.ms-container {
-	background: var(--bg-black-100);
-	height: 785px;
-}
 .messageSuccess {
 	background-color: var(--bg-black-50);
-	/* width: 300px; */
+	top: 300px;
+	position: relative;
 	height: 150px;
 	padding-top: 25px;
 	text-align: center;
 }
+
 @media (max-width: 1199px) {
 	.section .container {
 		padding-top: 70px;
